--- a/src/main/resources/templates/views/register.html
+++ b/src/main/resources/templates/views/register.html
@@ -22,7 +22,6 @@
                                     <input type="email" id="email" name="email" class="form-keyword" autocomplete="off" required>
                                     <button id="btnCheckEmail" type="button" class="btn-id-confirm">메일인증 </button>
                                     <p id="emailCheckMessage" class="alert-desc d-none">이미 사용 중인 이메일입니다.</p>
-                                    <p id="verificationCodeFailMessage" class="alert-desc d-none">이메일 인증 코드가 발송되었습니다.</p>
                                 </dd>
                             </dl>
                         </li>
@@ -40,13 +39,13 @@
                             <dl>
                                 <dt>패스워드</dt>
                                 <dd>
-                                    <input type="password" id="password" name="password" class="form-keyword" autocomplete="off" required>
+                                    <input type="password" id="password" name="password" placeholder="비밀번호는 8~20자, 대,소문자 하나 이상 포함" class="form-keyword" autocomplete="off" required>
                                 </dd>
                             </dl>
                             <dl>
                                 <dt>비밀번호 확인</dt>
                                 <dd>
-                                    <input type="password" id="passwordCheck" name="passwordCheck" class="form-keyword" autocomplete="off" required>
+                                    <input type="password" id="passwordCheck" name="passwordCheck" placeholder="비밀번호는 8~20자, 대,소문자 하나 이상 포함" class="form-keyword" autocomplete="off" required>
                                 </dd>
                             </dl>
                         </li>
@@ -54,7 +53,7 @@
                             <dl>
                                 <dt>아이디</dt>
                                 <dd>
-                                    <input type="text" id="username" name="username" class="form-keyword" required>
+                                    <input type="text" id="username" name="username" placeholder="아이디는 3자 이상 10자 이하" class="form-keyword" required>
                                     <button id="btnCheckId" type="button" class="btn-id-confirm">중복체크</button>
                                     <p id="idCheckMessage" class="alert-desc d-none">이미 사용 중인 아이디입니다.</p>
                                 </dd>
